--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,6 +1,6 @@
 <div class="contact-form">
 
-	<form method="post" action=https://formspree.io/f/mkgngybg id="contact-form">
+	<form method="post" action="https://formspree.io/f/mkgngybg" id="contact-form">
 
 		<div class="contact-form__item">
 			<label class="contact-form__label">Email Address *</label>
